hphp/hack/test/typecheck/references/refs_in_array/foreach2.php.exp
File "foreach2.php", line 5, characters 24-26:
Cannot take references to array elements. (Typing[4225])
