hphp/hack/test/typecheck/references/refs_in_array/foreach2.php
<?hh // strict

function test(): void {
  $x = array();
  foreach ($x as $k => &$v) {
  }
}
